@startuml multi-account-state
' Context: multi-account
' SDD: PROM-MULTI-ACCOUNT
' Revision: 2026-07-19

title Multi-account — client state machine\nfocusUserId owned by MultiAccountMachine

state NoOpenAccounts
state HasOpenAccounts
state FocusSwitching
state FocusedWithSession
state FocusedAwaitingSession : focus impostato,\nsessione in ripristino

[*] --> NoOpenAccounts : InitializeManifest\n[manifest empty]
[*] --> FocusedWithSession : InitializeManifest\n[session ok]
[*] --> FocusedAwaitingSession : InitializeManifest\n[focus but no session]

NoOpenAccounts --> HasOpenAccounts : AccountOpened\n[no session yet]
NoOpenAccounts --> FocusedWithSession : AccountOpened\n[session ok]
NoOpenAccounts --> FocusedWithSession : OpenAccountWithPassword\n/ OpenAccountWithSignUp

HasOpenAccounts --> FocusSwitching : FocusAccount
HasOpenAccounts --> FocusedWithSession : AccountFocused
HasOpenAccounts --> NoOpenAccounts : AccountClosed\n[ultimo account]

HasOpenAccounts --> FocusedAwaitingSession : SessionRestoreFailed

FocusedWithSession --> FocusSwitching : FocusAccount\n[altro account]
FocusedWithSession --> NoOpenAccounts : AccountClosed\n[ultimo account]
FocusedWithSession --> FocusedWithSession : AccountClosed\n[non ultimo, session ok]
FocusedWithSession --> FocusedAwaitingSession : AccountClosed\n[non ultimo, no session]

FocusedAwaitingSession --> FocusSwitching : FocusAccount
FocusedAwaitingSession --> FocusedWithSession : ReconnectFocusedSession\n/ AccountFocused
FocusedAwaitingSession --> NoOpenAccounts : AccountClosed\n[ultimo account]

FocusSwitching --> FocusedWithSession : AccountFocused
FocusSwitching --> FocusedAwaitingSession : SessionRestoreFailed

@enduml
